# comformer

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
comformer/: __init__.py  config.py  custom_train.py  data.py  direct_prediction_band.py  features.py  graphs.py  predict.py  train.py  train_props.py  utils.py
comformer/models/: bn_utils.py  comformer.py  scatter_fallback.py  transformer.py  utils.py
comformer/scripts/: train_jarvis.py  train_mp.py
data/: README.md  download_mp_data.py  example_usage.py  prepare_training_data.py
tests/: test_architecture_detection.py  test_custom_interface.py  test_extxyz_interface.py  test_multi_gpu.py  test_predict.py  test_predict_hf.py  test_scatter_fallback.py  test_train.py
tutorial/: EXTXYZ_INTERFACE.md  MULTI_GPU_FIX.md  MULTI_GPU_TRAINING.md  OPTIMIZATION_GUIDE.md  PLATFORM_COMPATIBILITY.md  PREDICTION_API_SUMMARY.md  PREDICTION_GUIDE.md  README_CUSTOM_INTERFACE.md
